--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,17 +17,23 @@ Description: R Package for preparing Modflow output data for
 License: MIT + file LICENSE
 URL: https://github.com/KWB-R/dwc.ar4gw
 BugReports: https://github.com/KWB-R/dwc.ar4gw/issues
+Imports: 
+    magrittr,
+    reticulate
+Suggests: 
+    covr,
+    dplyr,
+    knitr,
+    kwb.nextcloud,
+    kwb.utils,
+    rmarkdown,
+    stringr
+VignetteBuilder: 
+    knitr
+Remotes:
+    github::kwb-r/kwb.nextcloud@dev,
+    github::kwb-r/kwb.utils
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Depends:
-    reticulate
-Suggests: 
-    covr,
-    knitr,
-    kwb.utils,
-    rmarkdown
-Remotes:
-    github::kwb-r/kwb.utils
-VignetteBuilder: knitr
