--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,9 @@
 export("%>%")
 export(get_extended_budget)
 export(import_flopy)
+export(plot_data)
+import(ggplot2)
+importFrom(dplyr,rename)
 importFrom(magrittr,"%>%")
+importFrom(reshape,melt)
 importFrom(reticulate,import)
