--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,6 @@ export(plot_data)
 import(ggplot2)
 importFrom(dplyr,rename)
 importFrom(magrittr,"%>%")
-importFrom(reshape,melt)
+importFrom(reshape2,melt)
 importFrom(reticulate,import)
+importFrom(rlang,.data)
