Add helper function to_long()
for turning multidimensional array into tidy long format (layer, row, col, value)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(get_extended_budget)
 export(import_flopy)
 export(plot_data)
+export(to_long)
 import(ggplot2)
 importFrom(dplyr,rename)
 importFrom(magrittr,"%>%")
