Add to_wide() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,11 @@ export(get_extended_budget)
 export(import_flopy)
 export(plot_data)
 export(to_long)
+export(to_wide)
 import(ggplot2)
 importFrom(dplyr,rename)
 importFrom(magrittr,"%>%")
 importFrom(reshape2,melt)
 importFrom(reticulate,import)
 importFrom(rlang,.data)
+importFrom(tidyr,pivot_wider)
